fixed layout bugs, spotted on different screens, fixed margins

--- a/styles/components/DatePrice.module.scss
+++ b/styles/components/DatePrice.module.scss
@@ -5,7 +5,7 @@
 	margin-top: 5%;
 	animation: appearance 0.8s ease-in-out;
 	&.calculatePage {
-		animation: appearance-other 0.8s ease-out;
+		animation: appearance-other 0.8s ease-in-out;
 	}
 }
 
