--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,8 +1,16 @@
 @import "./variables.scss";
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
 html,
 body {
 	padding: 0;
 	margin: 0;
+	min-height: 100vh;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -17,7 +25,8 @@ li {
 h1,
 h2,
 h3,
-h4 {
+h4,
+p {
 	margin: 0;
 }
 
@@ -36,7 +45,7 @@ a {
 	}
 	body {
 		color: white;
-		background: #131313;
+		background: $background;
 		font-family: "Roboto";
 		display: flex;
 		flex-direction: column;
