--- a/styles/layout/wrapper.module.scss
+++ b/styles/layout/wrapper.module.scss
@@ -14,7 +14,7 @@
 
 .footer {
 	@include flex(row, center, center);
-	height: 10%;
+	height: 8vh;
 	color: #eee;
 	font-size: 0.8rem;
 }
