--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,3 +1,3 @@
 // COLORS
 $hovercolor: #e3e339;
-$background: #131313;
+$background: #1c1c1c;
